--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                 <option value="bogo">Bogo Sort</option>
                 <option value='stooge'>Stooge Sort</option>
                 <option value='slow'>Slow Sort</option>
+                <option value='inquisitor'>Inquisitor Sort</option>
             </optgroup>>
         </select>
         <button id='beginSort'>Begin Sort</button>
