--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                 <option value='stooge'>Stooge Sort</option>
                 <option value='slow'>Slow Sort</option>
                 <option value='inquisitor'>Inquisitor Sort</option>
+                <option value='communism'>Communism Sort</option>
             </optgroup>>
         </select>
         <button id='beginSort'>Begin Sort</button>
